name:                HepMC
version:             0.0
synopsis:            Haskell HepMC parser and builder
description:         Haskell HepMC parser and builder
homepage:            http://github.com/wavewave/HepMC
license:             GPL-3
license-file:        LICENSE
author:              Ian-Woo Kim
maintainer:          ianwookim@gmail.com
category:            Physics
build-type:          Simple
cabal-version:       >=1.8

executable tester
   main-is:             tester.hs
   hs-source-dirs:      exe
   ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
   ghc-prof-options: -caf-all -auto-all
   build-depends:   attoparsec,
                    base == 4.*,
                    pipes,
                    pipes-attoparsec,
                    pipes-text,
                    text,
                    transformers,
                    HepMC


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   attoparsec,
                   base == 4.*,
                   pipes-attoparsec,
                   text
  Exposed-Modules: HEP.Parser.HepMC
  Other-Modules: 

