name:                HepMC
version:             0.0
synopsis:            Haskell HepMC parser and builder
description:         Haskell HepMC parser and builder
homepage:            http://github.com/wavewave/HepMC
license:             GPL-3
license-file:        LICENSE
author:              Ian-Woo Kim
maintainer:          ianwookim@gmail.com
category:            Physics
build-type:          Simple
cabal-version:       >=1.8

flag devel
  description:       Create small test executables
  default:           False

executable tester
   main-is:          tester.hs
   hs-source-dirs:   exe
   ghc-options:      -Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
   ghc-prof-options: -caf-all -auto-all
   build-depends:    base == 4.*,
                     --
                     attoparsec,
                     pipes,
                     pipes-attoparsec,
                     pipes-parse,
                     pipes-text,
                     text,
                     transformers,
                     --
                     HepMC
  if flag(devel)
    buildable:       True
  else
    buildable:       False

Library
  hs-source-dirs:    src
  ghc-options:       -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options:  -caf-all -auto-all
  Build-Depends:     base == 4.*,
                     --
                     attoparsec,
                     bytestring,
                     blaze-builder,
                     pipes-attoparsec,
                     text
  Exposed-Modules:
                     HEP.Parser.HepMC.Builder
                     HEP.Parser.HepMC.Parser
                     HEP.Parser.HepMC.Type
  Other-Modules:
